fixed overlapping bottom nav ul

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ em { font-style:italic; }
 
 iframe { margin-bottom:20px; }
 
-nav { font-weight:100;background-color: #444; width:160px; float:left; display:inline; padding-top:50px; padding-left:50px; position:fixed; height:100%; z-index:0; top:0; left:0px; }
+nav { min-height: 370px; font-weight:100;background-color: #444; width:160px; float:left; display:inline; padding-top:50px; padding-left:50px; position:fixed; height:100%; z-index:0; top:0; left:0px; }
 nav ul { list-style:none; margin-top:50px; }
 
 nav ul:last-child { margin-top:100px; font-size:10pt; position:absolute; bottom:100px; }
@@ -38,7 +38,7 @@ ul.exp time { color:#C4C4C4; font-style: italic; margin-left: 20px}
   object, video, div.video-wrapper, div.player { width:100%; max-width:100% !important; }
   body { padding-right: 30px}
   nav h1 { display:inline-block; float:left; }
-  nav { margin-bottom:20px; min-width:295px; position:static; display:block; width:100%; max-width:700px; padding-top:10px; padding-left:0px; margin-left: 15px; background-color:inherit; height:auto; border-bottom:1px solid #aaa; }
+  nav { min-height:0px;margin-bottom:20px; min-width:295px; position:static; display:block; width:100%; max-width:700px; padding-top:10px; padding-left:0px; margin-left: 15px; background-color:inherit; height:auto; border-bottom:1px solid #aaa; }
   nav ul { margin:0; margin-bottom:10px; display:inline-block; float:right; }
   nav ul li { display:inline-block; margin-left:10px;}
   nav ul li:nth-child(4) { display:none; }
